--- a/html/Tutorial-results.html
+++ b/html/Tutorial-results.html
@@ -43,23 +43,39 @@
 <area shape="circle" coords="162,108,13" href="#row9_explanation">
 </map>
 
-<table id="ref_table" border=0 cellpadding=5 width=500>
+<table id="ref_table" border=0 cellpadding=5 width=90%>
 
 <tr id="row1_reference">
-  <td align="right"><img src="1_blue.gif"></img></td><td><a class="white-bg-link" href="#row1_explanation">Search</a></td>
-  <td align="right"><img src="4_blue.gif"></img></td><td><a class="white-bg-link" href="#row4_explanation">Similar Models</a></td>
-  <td align="right"><img src="7_blue.gif"></img></td><td><a class="white-bg-link" href="#row7_explanation">Model</a></td>
+  <td align="right"><a href="#row1_explanation"><img class="button" src="1_blue.gif"></img></a></td>
+  <td><a class="white-bg-link" href="#row1_explanation">Search</a></td>
+  
+  <td align="right"><a href="#row4_explanation"><img class="button" src="4_blue.gif"></img><a></td>
+  <td><a class="white-bg-link" href="#row4_explanation">Similar models</a></td>
 
+  <td align="right"><a href="#row_explanation"><img class="button" src="7_blue.gif"></img></td>
+  <td><a class="white-bg-link" href="#row7_explanation">Model</a></td>
 </tr>
+
 <tr id="row2_reference">
-  <td align="right"><img src="2_blue.gif"></img></td><td><a class="white-bg-link" href="#row2_explanation">Load an Example</a></td>
-  <td align="right"><img src="5_blue.gif"></img></td><td><a class="white-bg-link" href="#row5_explanation">GO enrichment results</a></td>
-  <td align="right"><img src="8_blue.gif"></img></td><td><a class="white-bg-link" href="#row8_explanation">Score</a></td>
+  <td align="right"><a href="#row2_explanation"><img class="button" src="2_blue.gif"></img></a></td>
+  <td><a class="white-bg-link" href="#row2_explanation">Load an example</a></td>
+  
+<td align="right"><a href="#row5_explanation"><img class="button" src="5_blue.gif"></img></a></td>
+  <td><a class="white-bg-link" href="#row5_explanation">GO annotations</a></td>
+  
+  <td align="right"><a href="#row8_explanation"><img class="button" src="8_blue.gif"></img></a></td>
+  <td><a class="white-bg-link" href="#row8_explanation">Score</a></td>
 </tr>
+
 <tr id="row3_reference">
-  <td align="right"><img src="3_blue.gif"></img></td><td><a class="white-bg-link" href="#row3_explanation">Show/Hide GO enrichment results</a></td>
-  <td align="right"><img src="6_blue.gif"></img></td><td><a class="white-bg-link" href="#row6_explanation">Query Terms Matched</a></td>
-  <td align="right"><img src="9_blue.gif"></img></td><td><a class="white-bg-link" href="#row9_explanation">Errors/Warnings</a></td>
+  <td align="right"><a href="#row3_explanation"><img class="button" src="3_blue.gif"></img></a></td>
+  <td><a class="white-bg-link" href="#row3_explanation">Show/Hide GO annotations</a></td>
+  
+  <td align="right"><a href="#row6_explanation"><img class="button" src="6_blue.gif"></img></a></td>
+  <td><a class="white-bg-link" href="#row6_explanation">Query terms matched</a></td>
+  
+  <td align="right"><a href="#row9_explanation"><img class="button" src="9_blue.gif"></img></a></td>
+  <td><a class="white-bg-link" href="#row9_explanation">Errors & warnings</a></td>
 </tr>
 <tr id="row4_reference">
 </tr>
@@ -83,16 +99,16 @@
 
    Valid queries are space-delimited, and include :
    <ul>
-     <li>Gene names (e.g. gcn4, rad52, gal4, yap6)
-     <li>Regular expressions of gene names (e.g. gcn*, rad*, gal*, yap*)
+     <li>Exact gene names (e.g. gcn4, rad52, gal4, yap6)
+     <li>Fuzzy gene names including the '*' character (e.g. gcn*, rad*, gal*, yap*)
      <li>GO term accessions (e.g. GO:0006366, GO:0004402)
-     <li>Double quote-enclosed full or partial GO term names (e.g. "DNA binding", "cell cycle", "acetylation", "cytoplasm")
+     <li>Full or partial GO term names enclosed in double-quotes (e.g. "DNA binding", "cell cycle", "acetylation", "cytoplasm")
    </ul>
 
    Any combination of the above is valid, however longer and more complex queries will 
-   take significantly longer than simple ones.<br/><br/>
+   take longer than simple ones.<br/><br/>
 
-   Regular expressions may match many different gene names across multiple organisms, which is not always desirable.  Moreover, regular expressions will significantly slow the search time, so use them wisely (as in the cases given above like yap* and gcn*, where families of genes have been grouped by name).<br/><br/>
+   Searches using the '*' character may match many different gene names across multiple organisms.  Moreover, these searches take longer, so use them wisely (as in the examples above like yap* and gcn*, where families of genes have been grouped by name).<br/><br/>
 
    To find GO term accessions, term names, or simply to learn more about the GO project, please visit the <a class="white-bg-link" href="http://www.geneontology.org">GO homepage</a>.<br/><br/>
 
@@ -110,7 +126,7 @@
       <span style="font-size:24;"><strong><em>Load an Example</em></strong></span>
     </td>
     <td>
-      At a loss for how to start or what to do?  Click this button and a 
+      At a loss for how to start?  Click this button and a 
       valid example query will populate the search box.<br/><br/>
 
 	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
@@ -127,7 +143,7 @@
       <span style="font-size:24;"><strong><em>Show/Hide GO enrichment results</em></strong></span>
     </td>
     <td>
-      Click here to expand or collapse all results for a certain ontology, e.g. Biological Process.
+      Click these tabs to expand or collapse all results for an ontology: Biological Process, Cellular Component, or Molecular Function.
       <br/><br/>
 
 	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
@@ -145,7 +161,7 @@
       <span style="font-size:24;"><strong><em>Similar Models</em></strong></span>
     </td>
     <td>
-      Click here to see models that share 3 of more genes with this model.  When viewing similar models, scores indicate the number of shared genes.  Currently this 'Similar Models' facility is only available for models containing yeast genes.
+      Click here to see the top 20 models that share 3 of more genes with this model.  When viewing similar models, a model score indicates the number of genes shared with the "Query" model.  Currently, similarity is only based on shared yeast genes.
       <br/><br/>
 
 	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
@@ -161,10 +177,10 @@
     </td>
 
     <td>
-      <span style="font-size:24;"><strong><em>GO enrichment results</em></strong></span>
+      <span style="font-size:24;"><strong><em>GO annotation results</em></strong></span>
     </td>
     <td>
-      The GO enrichment annotations for each model are organized into tables which can be expanded or collapsed by clicking on the ontology header (e.g. the 'Biological Process', 'Molecular function, or 'Cellular Component').  These GO enrichment annotation tables are grouped first by organism, then by ontology.  Within each ontology, the annotations are first sorted by the number of matching query terms, then by enrichment P-value.<br/><br/>
+      The GO annotations for each model are organized into tables which can be expanded or collapsed by clicking on the tabs in the header labeled <font class="group-toggle">Biological Process</font>, <font class="group-toggle">Molecular function</font>, or <font class="group-toggle">Cellular Component</font>.  For each model, the GO annotation tables are grouped first by organism, then by GO ontology.  Within each ontology, the annotations are first sorted by the number of matching query terms, then by enrichment P-value.<br/>
 
 
       <table cellpadding=5>
@@ -173,8 +189,8 @@
 	<img align="top" src="hypergeometric-cartoon.jpg"></img>
         </td>
 	<td>
-	  Models that contain many genes with the same GO annotation were scored for statistical significance using the <a class="white-bg-link" href="http://en.wikipedia.org/wiki/Hypergeometric">hypergeometric test</a>.
-	  The P-value of an enrichment indicates the significance of the overlap, <strong><em>K</em></strong>, between an annotation with <strong><em>A</em></strong> genes and a model with <strong><em>M</em></strong> genes. 
+	  Models were scored for GO annotation enrichment using the <a class="white-bg-link" href="http://en.wikipedia.org/wiki/Hypergeometric">hypergeometric test</a>.
+	  The P-value of an enrichment indicates the significance of the overlap, <strong><em>K</em></strong>, between an annotation with <strong><em>A</em></strong> genes and a model with <strong><em>M</em></strong> genes. This P-value has not been corrected for multiple hypothesis testing.
 	</td>
       </tr>
       </table>
@@ -198,7 +214,7 @@
       <span style="font-size:24;"><strong><em>Query Terms Matched</em></strong></span>
     </td>
     <td>
-      Query terms matching the model will be highlighted here.
+      Query terms matching the model are highlighted here.
 
       <br/><br/>
 
@@ -219,9 +235,9 @@
       Clicking on the thumbnail gives you a larger picture of the model.  Links below may include:<br/>
       <ul>
         <li> [PubMed] - link to PubMed abstract</li>
-	<li> [legend] - link to legend/published-figures for model interpretation
+	<li> [legend] - link to legend/published-figures for interpreting the model
 	<li> [website] - link to supplementary website
-	<li> [sif] - textual representation the model in <a class="white-bg-link" href="http://cytoscape.org">Cytoscape</a> (S)imple (I)nteraction (F)ormat.
+	<li> [sif] - text representation the model in <a class="white-bg-link" href="http://cytoscape.org">Cytoscape</a> (S)imple (I)nteraction (F)ormat.
       </ul>
 
 	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
@@ -243,7 +259,7 @@
 
     Models are scored by the number of matching query terms, i.e. gene names or GO term accessions/names.  When viewing similar models, this score is the number of genes shared between the Query model and the model on each row of the results.
 
-   <a class="white-bg-link" href="FAQ">For a more in depth explanation, see FAQ.</a><br/><br/>
+<!--   <a class="white-bg-link" href="FAQ">For a more in depth explanation, see FAQ.</a><br/><br/>-->
 
 	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
 	   <hr/>
@@ -263,7 +279,7 @@
       <span style="font-size:24;"><strong><em>Errors/Warnings</em></strong></span>
     </td>
     <td>
-      Errors and warnings concerning the query are displayed in red here.  In particular, when the query matches a gene synonym, the message will have a message in the form: <br/><br/>
+      Errors and warnings concerning the query are displayed in red here.  When the query matches a gene synonym, a message similar to this will appear: <br/><br/>
       <p style="color:red">[query] matches:<br/>&nbsp&nbsp;&nbsp;&nbsp;[S], a synonym of G in O. G is shown in results.</p><br/>
 
       S is the gene (S)ynonym matched by query.<br/>
@@ -271,9 +287,8 @@
       G is a gene in (O)rganism.<br/>
       G will be shown and highlighted in the results, instead of S.<br/><br/>
      
-In this example, the warning informs us that the query rad* matched the synonyms of several genes.  This kind of message gives us a heads up on what names in the results correspond to which gene names that matched the query.
-
-      <br/><br/>
+This message helps interpret the results by alerting you to the standard gene names of synonyms that matched the query.
+In the example image at the top of the page, the query rad* matched synonyms of raps, SSL2, okr, HPR5, and, MRE11.      <br/><br/>
 
 	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
 
