updated tutorial-home in trunk/html

--- a/html/Tutorial-home.html
+++ b/html/Tutorial-home.html
@@ -24,10 +24,13 @@
 
 <h1>Tutorial (Page 1/3) - Home</h1>
 
+<!--
 <a class="white-bg-link" href="http://www.cellcircuits.org">Back to CellCircuits</a>&nbsp;&nbsp;
 <a class="white-bg-link" href="Tutorial-advanced-search.html">Next >></a><br/>
+-->
 
-<img id="tutorial-img" src="Tutorial-home_v2.gif" border=0 usemap="#home_tutorial_map" title="Home Tutorial image"></img>
+
+<img id="tutorial-img" src="Tutorial-home_v3.gif" border=0 usemap="#home_tutorial_map" title="Home Tutorial image"></img>
 
 <map name="home_tutorial_map">
 <area shape="circle" coords="67,211,18"  href="#row1_explanation">
@@ -45,20 +48,36 @@
 </table>
 -->
 
-<br/>
-<hr/>
+<br>
 
 
-<table border=0 cellpadding="5" cellspacing="5" width=800>
+
+
+<table border=0 cellpadding="5" cellspacing="5" width="800">
+<!--
+  <tr><td colspan=4><hr></td></tr>
+-->
+  <tr>
+     <td align=left valign=center><a href="Tutorial-advanced-search.html"><img src="red-back.gif" border=0></img></a></td>
+     <td colspan=2 align=center valign=center><a href="http://www.cellcircuits.org"><img src="CC-logo-small.jpg" border=0></img></td>
+     <td align=right valign=center><a href="Tutorial-advanced-search.html"><img src="red-next.gif" border=0></img></a></td>
+  </tr>
+
+  <tr><td colspan=4><hr></td></tr>
+
+</table>
+
+
+<table border=0 cellpadding="5" cellspacing="5" width="800">
 
   <tr id="row1_explanation" valign="top">
+  
     <td>
-      <img src="1_blue.gif"></img>
+      <img src="1_red.gif"></img>
     </td>
     <td>
-      <span style="font-size:24;"><strong><em>Search</em></strong></font></span>
-    </td>
-    <td>
+
+    <h2>Search</h2>
 
 
    Valid queries are space-delimited, and include :
@@ -77,19 +96,14 @@
    To find GO term accessions, term names, or simply to learn more about the GO project, please visit the <a class="white-bg-link" href="http://www.geneontology.org">GO homepage</a>.<br/><br/>
 
 	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
-	   <hr/>
 
 
     </td>
-  </tr>
-  <tr id="row2_explanation" valign="top">
     <td>
-      <img src="2_blue.gif"></img>
+      <img src="2_red.gif"></img>
     </td>
     <td>
-      <span style="font-size:24;"><strong><em>Load an Example</em></strong></span>
-    </td>
-    <td>
+      <h2>Load an Example</h2>
       At a loss for how to start?  Click this button and a 
       valid example query will populate the search box.<br/><br/>
 
@@ -99,6 +113,23 @@
   </tr>
 
 </table>
+
+
+<table border=0 cellpadding="5" cellspacing="5" width="800">
+
+  <tr><td colspan=4><hr></td></tr>
+
+  <tr>
+     <td align=left valign=center><a href="Tutorial-advanced-search.html"><img src="red-back.gif" border=0></img></a></td>
+     <td colspan=2 align=center valign=center><a href="http://www.cellcircuits.org"><img src="CC-logo-small.jpg" border=0></img></td>
+     <td align=right valign=center><a href="Tutorial-advanced-search.html"><img src="red-next.gif" border=0></img></a></td>
+  </tr>
+<!--
+  <tr><td colspan=4><hr></td></tr>
+-->
+</table>
+
+
 
 <hr/>
 
