Added sourav changes to HTML files

--- a/html/about_cell_circuits.html
+++ b/html/about_cell_circuits.html
@@ -45,20 +45,20 @@
       <td align="left" colspan="2">
         <div class="explanation" align="left">
 	  <p>
-<h2>What is CellCircuits?</h2>
-	  <p>CellCircuits is an open-access database of molecular network models,
-designed to bridge the gap between databases of individual pair-wise
+<h2><font style="text-decoration: underline;">What is CellCircuits?</font></h2>
+	  <p>CellCircuits is an open-access <font style="color:#8DA4AE; font-weight:bold;" size="+2">database of molecular network models</font>,
+designed to <font style="font-weight: bold; color:orange;" size="+2">bridge the gap</font> between databases of individual pair-wise
 molecular interactions and databases of validated pathways.  CellCircuits
 captures the output from an increasing number of approaches that screen
-molecular interaction networks to identify functional subnetworks, based
+molecular interaction networks to identify <font style="font-weight: bold; color:#69AF93;" size="+2">functional subnetworks</font>, based
 on their correspondence with expression or phenotypic data, their internal
 structure, or their conservation across species.  
 </p>
 <br>
 <p>Models are available
-either as images or in machine-readable formats and can be queried by the
+either as images or in machine-readable formats and can be <font style="font-weight: bold; color:red;" size="+2">queried</font> by the
 names of proteins they contain or by their enriched biological functions. 
-CellCircuits is designed as a clearinghouse in which theorists may
+CellCircuits is designed as a <font style="font-weight: bold; color:orange;" size="+2">clearinghouse</font> in which theorists may
 distribute or revise models in need of validation and experimentalists may
 search for models or specific hypotheses relevant to their interests.
 	  </p><br />
@@ -74,7 +74,7 @@ search for models or specific hypotheses relevant to their interests.
         <div class="explanation" align="left">
 	  <p>
 	    <hr>
-	    <h2>Features</h2>
+	    <h2><font style="text-decoration: underline;">Features</font></h2>
 	    <b>Search the network models in Cell Circuits ...</b>
 	    <br>(try entering the words in <font class="example">underline bold</font> into the search box or click on the examples below)
             <ul>
@@ -107,19 +107,22 @@ search for models or specific hypotheses relevant to their interests.
     </tr>
 
     <tr>
-      <td align="center" colspan="2"><br><br>
+      <td align="center" colspan="2">
+	<hr />
         <a class="white-bg-link" href="index.html" title="Click to go to the CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a class="white-bg-link" href="advanced_search.html">Advanced Search</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 	<a class="white-bg-link" href="Tutorial-home.html">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 	<a class="white-bg-link" href="http://chianti.ucsd.edu/idekerlab/index.html">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a class="white-bg-link" href="http://ucsd.edu">UCSD</a>
 	<p style="font-style:italic;font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
-	<hr />
+<!--
+
 	<p class="credits">Questions? Comments? Suggestions? Please see the 
           <a href="http://groups.google.com/group/CellCircuits">archives</a>
           or send email to 
           <a href="mailto:CellCircuits@googlegroups.com?subject=[CellCircuits]">CellCircuits@googlegroups.com</a>
         </p>
+-->
       </td>
     </tr>
   </table>
@@ -139,6 +142,7 @@ search for models or specific hypotheses relevant to their interests.
   <input type="hidden" name="publication"  value="Sharan2005_PNAS"            checked="checked" />
   <input type="hidden" name="publication"  value="Suthram2005_Nature"         checked="checked" />
   <input type="hidden" name="publication"  value="Yeang2005_GB"               checked="checked" />
+  <input type="hidden" name="publication"  value="BandyopadhyayGersten2007"               checked="checked" />
 
   <input type="hidden" name="species" value="Saccharomyces cerevisiae" checked="checked" />
   <input type="hidden" name="species" value="Caenorhabditis elegans"   checked="checked" />
