--- a/html/advanced_search.html
+++ b/html/advanced_search.html
@@ -333,9 +333,15 @@
 	  </a>
 	</p>
       </td>
+      <td class="advanced-search-cover">
+        <input type="checkbox" name="publication" value="BandyopadhyayGersten2007" checked="checked" />
+      </td>
+      </td>
       <td class="advanced-search-cover">&nbsp;</td>
-      <td class="advanced-search-cover">&nbsp;</td>
-      <td class="advanced-search-citation-right">&nbsp;</td>
+      <td class="advanced-search-citation-right">
+      Bandyopadhyay S, et al.
+      <br>SUBMITTED (2007)
+      </td>
     </tr>
 
     <!--<tr><td colspan="8"><hr></td></tr>-->
