--- a/html/index.html
+++ b/html/index.html
@@ -61,6 +61,7 @@
   <input type="hidden" name="publication"  value="Sharan2005_PNAS"            checked="checked" />
   <input type="hidden" name="publication"  value="Suthram2005_Nature"         checked="checked" />
   <input type="hidden" name="publication"  value="Yeang2005_GB"               checked="checked" />
+  <input type="hidden" name="publication"  value="BandyopadhyayGersten2007"               checked="checked" />
 
   <input type="hidden" name="species" value="Saccharomyces cerevisiae" checked="checked" />
   <input type="hidden" name="species" value="Caenorhabditis elegans"   checked="checked" />
