cleaned up html directory a bit

--- a/html/Tutorial-home.html
+++ b/html/Tutorial-home.html
@@ -66,17 +66,17 @@
            <table border=0>
 
 	   <tr>
-	     <td colspan=4 align=right>
+	     <td colspan=5 align=right>
 	       <a href="Tutorial-advanced-search.html"><img src="red-back.gif" align=absmiddle border=0></img></a>
                <a href="Tutorial-advanced-search.html"><img src="red-next.gif" align=absmiddle border=0></img></a>
 	     </td>
 	   </tr>
 
 	     <tr>
-	       <td colspan=4>
+	       <td colspan=5>
                  <span class="welcome-header">Welcome to CellCircuits</span>
                  <div class="image">
-                   <img id="tutorial-img" src="Tutorial-results_v4_page1.gif" border=0 usemap="#home_tutorial_map" title="Home Tutorial image"></img>
+                   <img id="tutorial-img" src="images/tutorial/CC-home.gif" border=0 usemap="#home_tutorial_map" title="Home Tutorial image"></img>
                  </div>
 
                <map name="home_tutorial_map">
@@ -97,6 +97,8 @@
                   Search
                </td>
 
+	       <td>&nbsp;&nbsp;</td>
+
                <td width=40 valign=center>
                  <img src="2_red.gif"></img>
                </td>
@@ -110,13 +112,13 @@
              <tr>
                <td colspan=2>
 
-              Separate search terms with a space, including:
-              <ul>
-                <li>Exact gene names (e.g. gcn4, rad52, gal4, yap6)
-                <li>Fuzzy gene names including the '*' character (e.g. gcn*, rad*, gal*, yap*)
-                <li><a class="blue-link" href="http://www.geneontology.org">GO</a> term accessions (e.g. GO:0006366, GO:0004402) 
-                <li>Full or partial <a class="blue-link" href="http://www.geneontology.org">GO</a> term names enclosed in double-quotes (e.g. "DNA binding", "cell cycle", "acetylation", "cytoplasm")
-              </ul>
+                 Separate search terms with a space, including:
+                 <ul>
+                   <li>Exact gene names (e.g. gcn4, rad52, gal4, yap6)
+                   <li>Fuzzy gene names including the '*' character (e.g. gcn*, rad*, gal*, yap*)
+                   <li><a class="blue-link" href="http://www.geneontology.org">GO</a> term accessions (e.g. GO:0006366, GO:0004402) 
+                   <li>Full or partial <a class="blue-link" href="http://www.geneontology.org">GO</a> term names enclosed in double-quotes (e.g. "DNA binding", "cell cycle", "acetylation", "cytoplasm")
+                 </ul>
 
            <!--
               Any combination of the above is valid, however longer and more complex queries will 
@@ -130,6 +132,8 @@
 
                </td>
 
+	       <td>&nbsp;&nbsp;</td>
+
                <td colspan=2 valign=top>
                  At a loss for how to start?  Click this button and a 
                  valid example query will populate the search box.<br/><br/>
@@ -138,7 +142,7 @@
              </tr>
 
 	     <tr>
-	       <td colspan=4 align=right>
+	       <td colspan=5 align=right>
 	         <a href="Tutorial-advanced-search.html"><img src="red-back.gif" align=absmiddle border=0></img></a>
 	         <a href="Tutorial-advanced-search.html"><img src="red-next.gif" align=absmiddle border=0></img></a>
 	       </td>
