html dir file maintenace

--- a/html/legends.html
+++ b/html/legends.html
@@ -14,7 +14,7 @@
   <script type="text/javascript"></script>
 
   <style type="text/css" title="currentStyle" media="screen">
-    @import "master.css";
+    @import "css/master.css";
   </style>
 
   <!-- The following also works for importing our style sheet -->
