--- a/html/Tutorial-home.html
+++ b/html/Tutorial-home.html
@@ -12,7 +12,7 @@
   <script src="javascript/scriptaculous.js" type="text/javascript"></script>
 
   <!--<link type="text/css" rel="stylesheet" href="master.css">-->
-  <link type="text/css" rel="stylesheet" href="tutorial.css">
+  <link type="text/css" rel="stylesheet" href="css/tutorial.css">
 
   <title>Cell Circuits - Tutorial (Page 1/4) - Home</title>
 
@@ -67,8 +67,8 @@
 
 	   <tr>
 	     <td colspan=5 align=right>
-	       <a href="Tutorial-advanced-search.html"><img src="red-back.gif" align=absmiddle border=0></img></a>
-               <a href="Tutorial-advanced-search.html"><img src="red-next.gif" align=absmiddle border=0></img></a>
+	       <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>
+               <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
 	     </td>
 	   </tr>
 
@@ -143,8 +143,8 @@
 
 	     <tr>
 	       <td colspan=5 align=right>
-	         <a href="Tutorial-advanced-search.html"><img src="red-back.gif" align=absmiddle border=0></img></a>
-	         <a href="Tutorial-advanced-search.html"><img src="red-next.gif" align=absmiddle border=0></img></a>
+	         <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>
+	         <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
 	       </td>
              </tr>
            </table>
