--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="javascript/advanced_search.js"></script>
   <script src="javascript/scriptaculous.js" type="text/javascript"></script>
 
-  <link type="text/css" rel="stylesheet" href="master.css">
+  <link type="text/css" rel="stylesheet" href="css/master.css">
 
   <title>Cell Circuits - A searchable repository of published network model hypotheses</title>
 
